syntax = "proto3";

package subkey;

import "versioned_bytes.proto";

message Subkey {
  versioned_bytes.VersionedBytes signer = 1;
  versioned_bytes.VersionedBytes cosigner = 2;
  versioned_bytes.VersionedBytes tangent = 3;
}

enum SubkeyField {
  Signer = 0;
  Cosigner = 1;
  Tangent = 2;
}