syntax = "proto3";

package crypto;

/**
 * Keys (256-bit)
*/
message Key {
	uint64 u0 = 1;
	uint64 u1 = 2;
	uint64 u2 = 3;
	uint64 u3 = 4;
}

message PublicKey {
    Key key = 1;
}

message PrivateKey {
	Key key = 1;
}

message KeyPair {
	PublicKey public_key = 1;
	PrivateKey private_key = 2;
}

/**
 * Hash (256-bit)
*/
message Hash {
	uint64 u0 = 1;
	uint64 u1 = 2;
	uint64 u2 = 3;
	uint64 u3 = 4;
}

/**
 * Signature (512-bit)
*/
message Signature {	
	bytes bytes = 5;
}

/**
  * Cipher
*/
message EncryptedBytes {
	bytes nonce = 1;
	bytes bytes = 6;
}

message DecryptedBytes {
	bytes bytes = 6;
}